templates/jupyterhub_template.yaml
---
# Source: jupyterhub/templates/hub/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-3.0.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: hub
  name: release-name-jupyterhub-hub
  namespace: "default"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: hub
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Pods with label "hub.jupyter.org/network-access-hub" --> Hub
    - ports:
        - port: 8081
      from:
        - podSelector:
            matchLabels:
              hub.jupyter.org/network-access-hub: "true"
          namespaceSelector:
            matchLabels: {}
        - namespaceSelector:
            matchLabels:
              hub.jupyter.org/network-access-hub: "true"
  egress:
    # Hub --> Proxy API
    - ports:
        - port: 8001
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jupyterhub
              app.kubernetes.io/instance: release-name
              app.kubernetes.io/component: proxy
    # Hub --> Single User
    - ports:
        - port: 8888
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jupyterhub
              app.kubernetes.io/instance: release-name
              app.kubernetes.io/component: singleuser
    ## DNS access
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    ## PostgreSQL access
    - ports:
        - protocol: UDP
          port: 5432
        - protocol: TCP
          port: 5432
    ## Hub --> Any IP:PORT
    ##
    - to:
---
# Source: jupyterhub/templates/proxy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-3.0.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: proxy
  name: release-name-jupyterhub-proxy
  namespace: "default"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: proxy
  policyTypes:
    - Ingress
    - Egress
  ingress:
    ## Any IP --> Proxy
    ##
    - ports:
        - port: 8000
    
    # Pods with label "hub.jupyter.org/network-access-proxy-api" --> Proxy API
    - ports:
        - port: 8001
      from:
        - podSelector:
            matchLabels:
              hub.jupyter.org/network-access-proxy-api: "true"
          namespaceSelector:
            matchLabels: {}
        - namespaceSelector:
            matchLabels:
              hub.jupyter.org/network-access-proxy-api: "true"
  egress:
    # Proxy --> Hub
    - ports:
        - port: 8081
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jupyterhub
              app.kubernetes.io/instance: release-name
              app.kubernetes.io/component: hub
    # Proxy --> Single User
    - ports:
        - port: 8888
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jupyterhub
              app.kubernetes.io/instance: release-name
              app.kubernetes.io/component: singleuser
    ## DNS access
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
# Source: jupyterhub/templates/singleuser/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-3.0.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: singleuser
  name: release-name-jupyterhub-singleuser
  namespace: "default"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: singleuser
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Pods with label "hub.jupyter.org/network-access-singleuser" --> Single User
    - ports:
        - port: 8888
      from:
        - podSelector:
            matchLabels:
              hub.jupyter.org/network-access-singleuser: "true"
          namespaceSelector:
            matchLabels: {}
        - namespaceSelector:
            matchLabels:
              hub.jupyter.org/network-access-singleuser: "true"
  egress:
    # Single User --> Hub
    - ports:
        - port: 8081
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jupyterhub
              app.kubernetes.io/instance: release-name
              app.kubernetes.io/component: hub
    ## Limit access to the Cloud Metadata API
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
    ## DNS access
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    ## PostgreSQL access
    - ports:
        - protocol: UDP
          port: 5432
        - protocol: TCP
          port: 5432
---
# Source: jupyterhub/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql-hl
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.0.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: jupyterhub/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.0.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: jupyterhub/templates/hub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-jupyterhub-hub
  namespace: "default"
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-3.0.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: hub
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: hub
---
# Source: jupyterhub/templates/proxy/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-jupyterhub-proxy-api
  namespace: "default"
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-3.0.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: proxy
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 8001
      targetPort: api
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: proxy
---
# Source: jupyterhub/templates/proxy/service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-jupyterhub-proxy-public
  namespace: "default"
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-3.0.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: proxy
  annotations:
spec:
  type: LoadBalancer
  externalTrafficPolicy: "Cluster"
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: proxy
---
# Source: jupyterhub/templates/image-puller/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: release-name-jupyterhub-image-puller
  namespace: "default"
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-3.0.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: image-puller
spec:
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: image-puller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jupyterhub
        helm.sh/chart: jupyterhub-3.0.1
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: image-puller
    spec:
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: jupyterhub
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/component: image-puller
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: pause
          image: marketplace.azurecr.io/bitnami/bitnami-shell:11-debian-11-r46
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          command:
            - /bin/sh
            - -c
            - sleep infinity
          resources:
            limits: {}
            requests: {}
---
# Source: jupyterhub/templates/hub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-jupyterhub-hub
  namespace: "default"
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-3.0.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: hub
spec:
  strategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: hub
  template:
    metadata:
      annotations:
        checksum/hub-config: d8436503c5624b47bf58d44a65ef992b89eff4ee74d8ffd6f5abee345811d378
        checksum/hub-secret: ee69957b43b0694cf8bb5f3407ea599de29cb0ed6affc94f366b041d5c82df41
      labels:
        app.kubernetes.io/name: jupyterhub
        helm.sh/chart: jupyterhub-3.0.1
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: hub
        hub.jupyter.org/network-access-proxy-api: "true"
        hub.jupyter.org/network-access-proxy-http: "true"
        hub.jupyter.org/network-access-singleuser: "true"
    spec:
      serviceAccountName: release-name-jupyterhub-hub
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: jupyterhub
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/component: hub
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: hub
          image: marketplace.azurecr.io/bitnami/jupyterhub:3.0.0-debian-11-r11
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          command:
            - jupyterhub
          args:
            - --config
            - /etc/jupyterhub/jupyterhub_config.py
            - --upgrade-db
          ports:
            - name: http
              containerPort: 8081
          resources:
            limits: {}
            requests: {}
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
            httpGet:
              path: /hub/health
              port: http
          livenessProbe:
            failureThreshold: 30
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
            httpGet:
              path: /hub/health
              port: http
          readinessProbe:
            failureThreshold: 30
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
            httpGet:
              path: /hub/health
              port: http
          volumeMounts:
            - mountPath: /etc/jupyterhub/jupyterhub_config.py
              subPath: jupyterhub_config.py
              name: config
            - mountPath: /etc/jupyterhub/z2jh.py
              subPath: z2jh.py
              name: config
            - mountPath: /usr/local/etc/jupyterhub/secret/
              name: secret
      volumes:
        - name: config
          configMap:
            name: release-name-jupyterhub-hub
        - name: secret
          secret:
            secretName: release-name-jupyterhub-hub
---
# Source: jupyterhub/templates/proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-jupyterhub-proxy
  namespace: "default"
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-3.0.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: proxy
spec:
  strategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: proxy
  template:
    metadata:
      annotations:
        checksum/hub-secret: 5d1c0fae3f72bf5bd63749e953c3c385d8187169316e3365f8d652354fc6aa4e
      labels:
        app.kubernetes.io/name: jupyterhub
        helm.sh/chart: jupyterhub-3.0.1
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: proxy
        hub.jupyter.org/network-access-hub: "true"
        hub.jupyter.org/network-access-singleuser: "true"
    spec:
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: jupyterhub
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/component: proxy
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: proxy
          image: marketplace.azurecr.io/bitnami/configurable-http-proxy:4.5.3-debian-11-r16
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          args:
            - configurable-http-proxy
            - "--ip=::"
            - "--api-ip=::"
            - --api-port=8001
            - --default-target=http://release-name-jupyterhub-hub:8081
            - --error-target=http://release-name-jupyterhub-hub:8081/hub/error
            - --port=8000
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: api
              containerPort: 8001
              protocol: TCP
          resources:
            limits: {}
            requests: {}
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
            httpGet:
              path: /_chp_healthz
              port: http
          livenessProbe:
            failureThreshold: 30
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
            httpGet:
              path: /_chp_healthz
              port: http
          readinessProbe:
            failureThreshold: 30
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
            httpGet:
              path: /_chp_healthz
              port: http
          volumeMounts:
---
# Source: jupyterhub/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.0.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
spec:
  replicas: 1
  serviceName: release-name-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: release-name-postgresql
      labels:
        app.kubernetes.io/name: postgresql
        helm.sh/chart: postgresql-12.0.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: primary
      annotations:
    spec:
      serviceAccountName: default
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: marketplace.azurecr.io/bitnami/postgresql:15.0.0-debian-11-r1
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "bn_jupyterhub" -d "dbname=bitnami_jupyterhub" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                
                - |
                  exec pg_isready -U "bn_jupyterhub" -d "dbname=bitnami_jupyterhub" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
